bbb.io-kernel (1.20230714.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -19,8 +19,7 @@ Description: BeagleBoard.org Kernel Branches
 Package: bbb.io-kernel-4.14-ti-xenomai
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.14.108-ti-xenomai-r143
+Pre-Depends: linux-image-4.14.108-ti-xenomai-r143
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -31,8 +30,7 @@ Description: BeagleBoard.org 4.14-ti-xenomai
 Package: bbb.io-kernel-4.14-ti-xenomai-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.14.108-ti-xenomai-r143
+Pre-Depends: linux-image-4.14.108-ti-xenomai-r143
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -48,8 +46,7 @@ Description: BeagleBoard.org 4.14-ti-xenomai for am335x
 Package: bbb.io-kernel-4.14-ti-xenomai-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.14.108-ti-xenomai-r143
+Pre-Depends: linux-image-4.14.108-ti-xenomai-r143
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -63,8 +60,7 @@ Description: BeagleBoard.org 4.14-ti-xenomai for am57xx
 Package: bbb.io-kernel-4.19-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-r74
+Pre-Depends: linux-image-4.19.94-ti-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -75,8 +71,7 @@ Description: BeagleBoard.org 4.19-ti
 Package: bbb.io-kernel-4.19-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-r74
+Pre-Depends: linux-image-4.19.94-ti-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -92,8 +87,7 @@ Description: BeagleBoard.org 4.19-ti for am335x
 Package: bbb.io-kernel-4.19-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-r74
+Pre-Depends: linux-image-4.19.94-ti-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -107,8 +101,7 @@ Description: BeagleBoard.org 4.19-ti for am57xx
 Package: bbb.io-kernel-4.19-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-rt-r74
+Pre-Depends: linux-image-4.19.94-ti-rt-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -119,8 +112,7 @@ Description: BeagleBoard.org 4.19-ti-rt
 Package: bbb.io-kernel-4.19-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-rt-r74
+Pre-Depends: linux-image-4.19.94-ti-rt-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -136,8 +128,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am335x
 Package: bbb.io-kernel-4.19-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-rt-r74
+Pre-Depends: linux-image-4.19.94-ti-rt-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -151,8 +142,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am57xx
 Package: bbb.io-kernel-5.4-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-r42
+Pre-Depends: linux-image-5.4.106-ti-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -163,8 +153,7 @@ Description: BeagleBoard.org 5.4-ti
 Package: bbb.io-kernel-5.4-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-r42
+Pre-Depends: linux-image-5.4.106-ti-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -180,8 +169,7 @@ Description: BeagleBoard.org 5.4-ti for am335x
 Package: bbb.io-kernel-5.4-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-r42
+Pre-Depends: linux-image-5.4.106-ti-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -195,8 +183,7 @@ Description: BeagleBoard.org 5.4-ti for am57xx
 Package: bbb.io-kernel-5.4-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-rt-r42
+Pre-Depends: linux-image-5.4.106-ti-rt-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -207,8 +194,7 @@ Description: BeagleBoard.org 5.4-ti-rt
 Package: bbb.io-kernel-5.4-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-rt-r42
+Pre-Depends: linux-image-5.4.106-ti-rt-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -224,8 +210,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am335x
 Package: bbb.io-kernel-5.4-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-rt-r42
+Pre-Depends: linux-image-5.4.106-ti-rt-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -239,8 +224,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am57xx
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -251,8 +235,7 @@ Description: BeagleBoard.org 5.10-ti
 Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -270,8 +253,7 @@ Description: BeagleBoard.org 5.10-ti for am335x
 Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -285,8 +267,7 @@ Description: BeagleBoard.org 5.10-ti for am57xx
 Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -297,8 +278,7 @@ Description: BeagleBoard.org 5.10-ti-rt
 Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -316,8 +296,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am335x
 Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -331,8 +310,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am57xx
 Package: bbb.io-kernel-6.1-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -343,8 +321,7 @@ Description: BeagleBoard.org 6.1-ti
 Package: bbb.io-kernel-6.1-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -358,8 +335,7 @@ Description: BeagleBoard.org 6.1-ti for am335x
 Package: bbb.io-kernel-6.1-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -372,8 +348,7 @@ Description: BeagleBoard.org 6.1-ti for am57xx
 Package: bbb.io-kernel-6.1-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -384,8 +359,7 @@ Description: BeagleBoard.org 6.1-ti-rt
 Package: bbb.io-kernel-6.1-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -399,8 +373,7 @@ Description: BeagleBoard.org 6.1-ti-rt for am335x
 Package: bbb.io-kernel-6.1-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -458,90 +431,90 @@ Description: BeagleBoard.org 5.15-bone for am335x
 Package: bbb.io-kernel-5.16-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.16.20-bone25,
+Pre-Depends: linux-image-5.16.20-bone26,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.16.20-bone25
+Recommends: libpruio-modules-5.16.20-bone26
 Description: BeagleBoard.org 5.16-bone for am335x
  This metapackage will install linux-image-5.16-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.17-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.17.15-bone16,
+Pre-Depends: linux-image-5.17.15-bone17,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.17.15-bone16
+Recommends: libpruio-modules-5.17.15-bone17
 Description: BeagleBoard.org 5.17-bone for am335x
  This metapackage will install linux-image-5.17-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.18-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.18.19-bone12,
+Pre-Depends: linux-image-5.18.19-bone13,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.18.19-bone12
+Recommends: libpruio-modules-5.18.19-bone13
 Description: BeagleBoard.org 5.18-bone for am335x
  This metapackage will install linux-image-5.18-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.19.17-bone14,
+Pre-Depends: linux-image-5.19.17-bone15,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.19.17-bone14
+Recommends: libpruio-modules-5.19.17-bone15
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.0-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.0.19-bone11,
+Pre-Depends: linux-image-6.0.19-bone12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.0.19-bone11
+Recommends: libpruio-modules-6.0.19-bone12
 Description: BeagleBoard.org 6.0-bone for am335x
  This metapackage will install linux-image-6.0-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.35-bone20,
+Pre-Depends: linux-image-6.1.38-bone21,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.35-bone20
+Recommends: libpruio-modules-6.1.38-bone21
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.2-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.2.16-bone11,
+Pre-Depends: linux-image-6.2.16-bone12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.2.16-bone11
+Recommends: libpruio-modules-6.2.16-bone12
 Description: BeagleBoard.org 6.2-bone for am335x
  This metapackage will install linux-image-6.2-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.3-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.3.11-bone12,
+Pre-Depends: linux-image-6.3.13-bone13,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.3.11-bone12
+Recommends: libpruio-modules-6.3.13-bone13
 Description: BeagleBoard.org 6.3-bone for am335x
  This metapackage will install linux-image-6.3-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.4-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.4.2-bone10,
+Pre-Depends: linux-image-6.4.3-bone11,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.4.2-bone10
+Recommends: libpruio-modules-6.4.3-bone11
 Description: BeagleBoard.org 6.4-bone for am335x
  This metapackage will install linux-image-6.4-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.5-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.5.0-rc1-bone0,
+Pre-Depends: linux-image-6.5.0-rc1-bone1,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.5.0-rc1-bone0
+Recommends: libpruio-modules-6.5.0-rc1-bone1
 Description: BeagleBoard.org 6.5-bone for am335x
  This metapackage will install linux-image-6.5-bone for am335x in Debian.
 
@@ -584,9 +557,9 @@ Description: BeagleBoard.org 5.15-bone-rt for am335x
 Package: bbb.io-kernel-6.1-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.35-bone-rt-r20,
+Pre-Depends: linux-image-6.1.38-bone-rt-r21,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.35-bone-rt-r20
+Recommends: libpruio-modules-6.1.38-bone-rt-r21
 Description: BeagleBoard.org 6.1-bone-rt for am335x
  This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
 
