--- a/bbb.io-kernel/suite/focal/debian/control
+++ b/bbb.io-kernel/suite/focal/debian/control
@@ -19,8 +19,7 @@ Description: BeagleBoard.org Kernel Branches
 Package: bbb.io-kernel-4.19-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-r74
+Pre-Depends: linux-image-4.19.94-ti-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -31,8 +30,7 @@ Description: BeagleBoard.org 4.19-ti
 Package: bbb.io-kernel-4.19-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-r74
+Pre-Depends: linux-image-4.19.94-ti-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -48,8 +46,7 @@ Description: BeagleBoard.org 4.19-ti for am335x
 Package: bbb.io-kernel-4.19-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-r74
+Pre-Depends: linux-image-4.19.94-ti-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -63,8 +60,7 @@ Description: BeagleBoard.org 4.19-ti for am57xx
 Package: bbb.io-kernel-4.19-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-rt-r74
+Pre-Depends: linux-image-4.19.94-ti-rt-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -75,8 +71,7 @@ Description: BeagleBoard.org 4.19-ti-rt
 Package: bbb.io-kernel-4.19-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-rt-r74
+Pre-Depends: linux-image-4.19.94-ti-rt-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -92,8 +87,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am335x
 Package: bbb.io-kernel-4.19-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-4.19.94-ti-rt-r74
+Pre-Depends: linux-image-4.19.94-ti-rt-r74
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -107,8 +101,7 @@ Description: BeagleBoard.org 4.19-ti-rt for am57xx
 Package: bbb.io-kernel-5.4-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-r42
+Pre-Depends: linux-image-5.4.106-ti-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -119,8 +112,7 @@ Description: BeagleBoard.org 5.4-ti
 Package: bbb.io-kernel-5.4-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-r42
+Pre-Depends: linux-image-5.4.106-ti-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -136,8 +128,7 @@ Description: BeagleBoard.org 5.4-ti for am335x
 Package: bbb.io-kernel-5.4-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-r42
+Pre-Depends: linux-image-5.4.106-ti-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -151,8 +142,7 @@ Description: BeagleBoard.org 5.4-ti for am57xx
 Package: bbb.io-kernel-5.4-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-rt-r42
+Pre-Depends: linux-image-5.4.106-ti-rt-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -163,8 +153,7 @@ Description: BeagleBoard.org 5.4-ti-rt
 Package: bbb.io-kernel-5.4-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-rt-r42
+Pre-Depends: linux-image-5.4.106-ti-rt-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -180,8 +169,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am335x
 Package: bbb.io-kernel-5.4-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.4.106-ti-rt-r42
+Pre-Depends: linux-image-5.4.106-ti-rt-r42
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -195,8 +183,7 @@ Description: BeagleBoard.org 5.4-ti-rt for am57xx
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -207,8 +194,7 @@ Description: BeagleBoard.org 5.10-ti
 Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -226,8 +212,7 @@ Description: BeagleBoard.org 5.10-ti for am335x
 Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -241,8 +226,7 @@ Description: BeagleBoard.org 5.10-ti for am57xx
 Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -253,8 +237,7 @@ Description: BeagleBoard.org 5.10-ti-rt
 Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -272,8 +255,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am335x
 Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -287,8 +269,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am57xx
 Package: bbb.io-kernel-6.1-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -299,8 +280,7 @@ Description: BeagleBoard.org 6.1-ti
 Package: bbb.io-kernel-6.1-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -314,8 +294,7 @@ Description: BeagleBoard.org 6.1-ti for am335x
 Package: bbb.io-kernel-6.1-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -328,8 +307,7 @@ Description: BeagleBoard.org 6.1-ti for am57xx
 Package: bbb.io-kernel-6.1-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -340,8 +318,7 @@ Description: BeagleBoard.org 6.1-ti-rt
 Package: bbb.io-kernel-6.1-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -355,8 +332,7 @@ Description: BeagleBoard.org 6.1-ti-rt for am335x
 Package: bbb.io-kernel-6.1-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -387,18 +363,18 @@ Description: BeagleBoard.org 5.15-bone for am335x
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.19.17-bone14,
+Pre-Depends: linux-image-5.19.17-bone15,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.19.17-bone14
+Recommends: libpruio-modules-5.19.17-bone15
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.35-bone20,
+Pre-Depends: linux-image-6.1.38-bone21,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.35-bone20
+Recommends: libpruio-modules-6.1.38-bone21
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
@@ -423,9 +399,9 @@ Description: BeagleBoard.org 5.15-bone-rt for am335x
 Package: bbb.io-kernel-6.1-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.35-bone-rt-r20,
+Pre-Depends: linux-image-6.1.38-bone-rt-r21,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.35-bone-rt-r20
+Recommends: libpruio-modules-6.1.38-bone-rt-r21
 Description: BeagleBoard.org 6.1-bone-rt for am335x
  This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
 
