--- a/bbb.io-kernel/suite/trixie/debian/control
+++ b/bbb.io-kernel/suite/trixie/debian/control
@@ -19,8 +19,7 @@ Description: BeagleBoard.org Kernel Branches
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -31,8 +30,7 @@ Description: BeagleBoard.org 5.10-ti
 Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -50,8 +48,7 @@ Description: BeagleBoard.org 5.10-ti for am335x
 Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-r64
+Pre-Depends: linux-image-5.10.168-ti-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -65,8 +62,7 @@ Description: BeagleBoard.org 5.10-ti for am57xx
 Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -77,8 +73,7 @@ Description: BeagleBoard.org 5.10-ti-rt
 Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -96,8 +91,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am335x
 Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-5.10.168-ti-rt-r64
+Pre-Depends: linux-image-5.10.168-ti-rt-r64
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -111,8 +105,7 @@ Description: BeagleBoard.org 5.10-ti-rt for am57xx
 Package: bbb.io-kernel-6.1-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -123,8 +116,7 @@ Description: BeagleBoard.org 6.1-ti
 Package: bbb.io-kernel-6.1-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -138,8 +130,7 @@ Description: BeagleBoard.org 6.1-ti for am335x
 Package: bbb.io-kernel-6.1-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-r6
+Pre-Depends: linux-image-6.1.33-ti-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -152,8 +143,7 @@ Description: BeagleBoard.org 6.1-ti for am57xx
 Package: bbb.io-kernel-6.1-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -164,8 +154,7 @@ Description: BeagleBoard.org 6.1-ti-rt
 Package: bbb.io-kernel-6.1-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -179,8 +168,7 @@ Description: BeagleBoard.org 6.1-ti-rt for am335x
 Package: bbb.io-kernel-6.1-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends:
- linux-image-6.1.33-ti-rt-r6
+Pre-Depends: linux-image-6.1.33-ti-rt-r6
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
@@ -211,36 +199,45 @@ Description: BeagleBoard.org 5.15-bone for am335x
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.35-bone20,
+Pre-Depends: linux-image-6.1.38-bone21,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.35-bone20
+Recommends: libpruio-modules-6.1.38-bone21
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.2-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.2.16-bone12,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.2.16-bone12
+Description: BeagleBoard.org 6.2-bone for am335x
+ This metapackage will install linux-image-6.2-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.3-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.3.11-bone12,
+Pre-Depends: linux-image-6.3.13-bone13,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.3.11-bone12
+Recommends: libpruio-modules-6.3.13-bone13
 Description: BeagleBoard.org 6.3-bone for am335x
  This metapackage will install linux-image-6.3-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.4-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.4.2-bone10,
+Pre-Depends: linux-image-6.4.3-bone11,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.4.2-bone10
+Recommends: libpruio-modules-6.4.3-bone11
 Description: BeagleBoard.org 6.4-bone for am335x
  This metapackage will install linux-image-6.4-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.5-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.5.0-rc1-bone0,
+Pre-Depends: linux-image-6.5.0-rc1-bone1,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.5.0-rc1-bone0
+Recommends: libpruio-modules-6.5.0-rc1-bone1
 Description: BeagleBoard.org 6.5-bone for am335x
  This metapackage will install linux-image-6.5-bone for am335x in Debian.
 
@@ -265,9 +262,9 @@ Description: BeagleBoard.org 5.15-bone-rt for am335x
 Package: bbb.io-kernel-6.1-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.35-bone-rt-r20,
+Pre-Depends: linux-image-6.1.38-bone-rt-r21,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.35-bone-rt-r20
+Recommends: libpruio-modules-6.1.38-bone-rt-r21
 Description: BeagleBoard.org 6.1-bone-rt for am335x
  This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
 
