bb-code-server (4.16.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/jammy/debian/bb-code-server.bb-code-server.service
+++ b/bb-code-server/suite/jammy/debian/bb-code-server.bb-code-server.service
@@ -9,7 +9,7 @@ User=ubuntu
 Group=ubuntu
 ExecStartPre=/bin/ln -sf /opt/vsx-examples/examples/ /home/ubuntu/
 ExecStartPre=/bin/mkdir -p /home/ubuntu/.local/share/code-server/User/
-ExecStartPre=/bin/cp /opt/vsx-examples/examples/settings.json /home/ubuntu/.local/share/code-server/User/
+ExecStartPre=/bin/cp -v /opt/bb-code-server/settings.json /home/ubuntu/.local/share/code-server/User/
 ExecStart=/opt/bb-code-server/app/bin/code-server --cert --auth none --disable-telemetry --disable-update-check --config /opt/bb-code-server/config/config.yaml --extensions-dir /opt/bb-code-server/extensions/ --bind-addr 0.0.0.0:3000 /home/ubuntu/examples/BeagleBoard.code-workspace
 Restart=always
 RestartSec=15
