--- a/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/rules
+++ b/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bookworm/debian/rules
@@ -44,7 +44,8 @@ BUILD_TREE=src
 unpack: unpack-stamp
 unpack-stamp:
 	ls
-	tar xjf binutils-*.tar.bz2
+	wget -c http://ftpmirror.gnu.org/binutils/binutils-2.41.tar.bz2
+	tar xjf binutils-2.41.tar.bz2
 	mv `ls -d binutils* | grep -v tar` src
 	#mkdir build
 	touch unpack-stamp
