--- a/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/control
+++ b/binutils-pru-debian-11-12-ubuntu-2004-2204/suite/bullseye/debian/control
@@ -3,7 +3,20 @@ Section: devel
 Priority: extra
 Maintainer: Dimitar Dimitrov <dinuxbg@gmail.com>
 Standards-Version: 3.9.3
-Build-Depends: bison, flex, gettext, texinfo, binutils (>= 2.9.5.0.12), gcc (>= 2.95.2), debhelper (>= 5), tar (>= 1.13.18), bzip2, findutils(>=4.2.31), autotools-dev, dh-autoreconf
+Build-Depends:
+ bison
+ , flex
+ , gettext
+ , texinfo
+ , binutils (>= 2.9.5.0.12)
+ , gcc (>= 2.95.2)
+ , debhelper (>= 5)
+ , tar (>= 1.13.18)
+ , bzip2
+ , findutils(>=4.2.31)
+ , autotools-dev
+ , dh-autoreconf
+ , wget
 
 Package: binutils-pru
 Section: devel
