--- a/gcc-pru/suite/bullseye/debian/control
+++ b/gcc-pru/suite/bullseye/debian/control
@@ -3,7 +3,25 @@ Section: devel
 Priority: extra
 Maintainer: Dimitar Dimitrov <dinuxbg@gmail.com>
 Standards-Version: 3.9.5
-Build-Depends: m4, autoconf2.64, libtool, bzip2, binutils-pru (>= 2.30.51.20180310), bison, flex, gettext, texinfo, zlib1g-dev, debhelper (>= 4.2.10), tar (>= 1.13.18), libmpfr-dev, lsb-release, patchutils, libmpc-dev, dpkg (>= 1.16.2), dh-autoreconf
+Build-Depends:
+ m4
+ , autoconf2.64
+ , libtool
+ , bzip2
+ , binutils-pru (>= 2.30.51.20180310)
+ , bison
+ , flex
+ , gettext
+ , texinfo
+ , zlib1g-dev
+ , debhelper (>= 4.2.10)
+ , tar (>= 1.13.18)
+ , libmpfr-dev
+ , lsb-release
+ , patchutils
+ , libmpc-dev
+ , dpkg (>= 1.16.2)
+ , dh-autoreconf
 Build-Conflicts: libgcc0, libgcc300
 
 Package: gcc-pru
