--- a/gnuprumcu/suite/bullseye/debian/rules
+++ b/gnuprumcu/suite/bullseye/debian/rules
@@ -3,6 +3,8 @@
 # output every command that modifies files on the build system.
 #export DH_VERBOSE = 1
 
+DEB_BUILD_OPTIONS=noautodbgsym
+
 # Since pru-gcc is packaged with --prefix=/usr/lib, we must follow suit.
 
 %:
