--- a/bb-u-boot-omap3-beagle/suite/bullseye/debian/rules
+++ b/bb-u-boot-omap3-beagle/suite/bullseye/debian/rules
@@ -5,16 +5,20 @@
 export DH_VERBOSE=1
 
 #U-Boot
-UB_TAG=master
-UB_CONFIG=omap3_beagle_defconfig
+UB_CONFIG=omap3_beagle
+UB_BRANCH=v2023.10-rc3
+UB_REPO="https://github.com/u-boot/u-boot.git"
 
 override_dh_strip:
 	# Just disable for now...
 
 override_dh_auto_configure:
-	git clone -b $(UB_TAG) https://github.com/u-boot/u-boot --depth=1
-	cd ./u-boot/ ; make ARCH=arm CROSS_COMPILE= distclean ; make ARCH=arm CROSS_COMPILE= $(UB_CONFIG) ; make ARCH=arm CROSS_COMPILE=
+	mkdir -p ./tmp/u-boot/ ; git clone -b $(UB_BRANCH) $(UB_REPO) --depth=5 ./tmp/u-boot/
+	make -C ./tmp/u-boot -j1 CROSS_COMPILE=arm-linux-gnueabihf- $(UB_CONFIG)_defconfig
+	make -C ./tmp/u-boot -j4 CROSS_COMPILE=arm-linux-gnueabihf-
 
 %:
 	dh $@
 
+override_dh_builddeb:
+	dh_builddeb -- -Zxz
