--- a/bb-u-boot-omap3-beagle/suite/buster/debian/control
+++ b/bb-u-boot-omap3-beagle/suite/buster/debian/control
@@ -2,19 +2,21 @@ Source: bb-u-boot-omap3-beagle
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		bc,
-		bison,
-		ca-certificates,
-		flex,
-		git,
-		libssl-dev,
-Standards-Version: 3.9.8
-Homepage: https://github.com/beagleboard/u-boot
+Build-Depends:
+ debhelper (>= 9)
+ , bc,
+ , bison
+ , ca-certificates
+ , flex
+ , git
+ , libssl-dev
+Standards-Version: 4.5.1
 
 Package: bb-u-boot-omap3-beagle
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
 Description: beagleboard.org u-boot for omap3_beagle
  beagleboard.org u-boot for omap3_beagle MLO/u-boot-dtb.img
 
