--- a/bb-u-boot-am57xx-evm-rc/suite/jammy/debian/control
+++ b/bb-u-boot-am57xx-evm-rc/suite/jammy/debian/control
@@ -1,4 +1,4 @@
-Source: bb-u-boot-am57xx-evm-beta
+Source: bb-u-boot-am57xx-evm-rc
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
@@ -11,11 +11,12 @@ Build-Depends:
  , git
  , libssl-dev
 Standards-Version: 4.5.1
-Homepage: https://git.beagleboard.org/beagleboard/u-boot.git
 
-Package: bb-u-boot-am57xx-evm-beta
+Package: bb-u-boot-am57xx-evm-rc
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
 Description: beagleboard.org u-boot for am57xx_evm
  beagleboard.org u-boot for am57xx_evm MLO/u-boot.img
 
