--- a/bb-u-boot-am57xx-evm-rc/suite/jammy/debian/rules
+++ b/bb-u-boot-am57xx-evm-rc/suite/jammy/debian/rules
@@ -5,18 +5,20 @@
 export DH_VERBOSE=1
 
 #U-Boot
-UB_TAG=v2022.04-bbb.io-am335x-am57xx
-UB_CONFIG=am57xx_evm_defconfig
+UB_CONFIG=am57xx_evm
+UB_BRANCH=v2023.10-rc3
+UB_REPO="https://github.com/u-boot/u-boot.git"
 
 override_dh_strip:
 	# Just disable for now...
 
 override_dh_auto_configure:
-	GIT_SSL_NO_VERIFY=true git clone -b $(UB_TAG) https://git.beagleboard.org/beagleboard/u-boot.git --depth=1
-	make -C ./u-boot -j1 ARCH=arm CROSS_COMPILE= distclean 
-	make -C ./u-boot -j1 ARCH=arm CROSS_COMPILE= $(UB_CONFIG)
-	make -C ./u-boot -j3 ARCH=arm CROSS_COMPILE=
+	mkdir -p ./tmp/u-boot/ ; git clone -b $(UB_BRANCH) $(UB_REPO) --depth=5 ./tmp/u-boot/
+	make -C ./tmp/u-boot -j1 CROSS_COMPILE=arm-linux-gnueabihf- $(UB_CONFIG)_defconfig
+	make -C ./tmp/u-boot -j4 CROSS_COMPILE=arm-linux-gnueabihf-
 
 %:
 	dh $@
 
+override_dh_builddeb:
+	dh_builddeb -- -Zxz
