bb-u-boot-am335x-evm-rc (2023.10.20230821.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am335x-evm-rc/suite/buster/debian/control
+++ b/bb-u-boot-am335x-evm-rc/suite/buster/debian/control
@@ -1,4 +1,4 @@
-Source: bb-u-boot-am335x-evm-beta
+Source: bb-u-boot-am335x-evm-rc
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
@@ -11,11 +11,12 @@ Build-Depends:
  , git
  , libssl-dev
 Standards-Version: 4.5.1
-Homepage: https://github.com/beagleboard/u-boot
 
-Package: bb-u-boot-am335x-evm-beta
+Package: bb-u-boot-am335x-evm-rc
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
 Description: beagleboard.org u-boot for am335x_evm
  beagleboard.org u-boot for am335x_evm MLO/u-boot-dtb.img
 
