--- a/bbb.io-kernel/suite/focal/debian/control
+++ b/bbb.io-kernel/suite/focal/debian/control
@@ -378,6 +378,15 @@ Recommends: libpruio-modules-6.1.38-bone23
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
+Package: bbb.io-kernel-6.5-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.5.0-bone8,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.5.0-bone8
+Description: BeagleBoard.org 6.5-bone for am335x
+ This metapackage will install linux-image-6.5-bone for am335x in Debian.
+
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
 Architecture: armhf
