--- a/bbb.io-kernel/suite/jammy/debian/control
+++ b/bbb.io-kernel/suite/jammy/debian/control
@@ -16,170 +16,6 @@ Depends:
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
-Package: bbb.io-kernel-4.19-ti
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-4.19.94-ti-r74
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-r74
-Description: BeagleBoard.org 4.19-ti
- This metapackage will install linux-image-4.19-ti in Debian.
-
-Package: bbb.io-kernel-4.19-ti-am335x
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-4.19.94-ti-r74
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-4.19.94-ti-r74
- , ti-sgx-ti335x-modules-4.19.94-ti-r74
- , rtl8723bu-modules-4.19.94-ti-r74
- , rtl8821cu-modules-4.19.94-ti-r74
- , bb-u-boot-am335x-evm
-Description: BeagleBoard.org 4.19-ti for am335x
- This metapackage will install linux-image-4.19-ti for am335x in Debian.
-
-Package: bbb.io-kernel-4.19-ti-am57xx
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-4.19.94-ti-r74
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-4.19.94-ti-r74
- , ti-sgx-jacinto6evm-modules-4.19.94-ti-r74
- , bb-u-boot-am57xx-evm
-Description: BeagleBoard.org 4.19-ti for am57xx
- This metapackage will install linux-image-4.19-ti for am57xx in Debian.
-
-Package: bbb.io-kernel-4.19-ti-rt
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-4.19.94-ti-rt-r74
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-rt-r74
-Description: BeagleBoard.org 4.19-ti-rt
- This metapackage will install linux-image-4.19-ti-rt in Debian.
-
-Package: bbb.io-kernel-4.19-ti-rt-am335x
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-4.19.94-ti-rt-r74
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-4.19.94-ti-rt-r74
- , ti-sgx-ti335x-modules-4.19.94-ti-rt-r74
- , rtl8723bu-modules-4.19.94-ti-rt-r74
- , rtl8821cu-modules-4.19.94-ti-rt-r74
- , bb-u-boot-am335x-evm
-Description: BeagleBoard.org 4.19-ti-rt for am335x
- This metapackage will install linux-image-4.19-ti-rt for am335x in Debian.
-
-Package: bbb.io-kernel-4.19-ti-rt-am57xx
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-4.19.94-ti-rt-r74
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-4.19.94-ti-rt-r74
- , ti-sgx-jacinto6evm-modules-4.19.94-ti-rt-r74
- , bb-u-boot-am57xx-evm
-Description: BeagleBoard.org 4.19-ti-rt for am57xx
- This metapackage will install linux-image-4.19-ti-rt for am57xx in Debian.
-
-Package: bbb.io-kernel-5.4-ti
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-5.4.106-ti-r42
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-r42
-Description: BeagleBoard.org 5.4-ti
- This metapackage will install linux-image-5.4-ti in Debian.
-
-Package: bbb.io-kernel-5.4-ti-am335x
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-5.4.106-ti-r42
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-5.4.106-ti-r42
- , ti-sgx-ti335x-modules-5.4.106-ti-r42
- , rtl8723bu-modules-5.4.106-ti-r42
- , rtl8821cu-modules-5.4.106-ti-r42
- , bb-u-boot-am335x-evm
-Description: BeagleBoard.org 5.4-ti for am335x
- This metapackage will install linux-image-5.4-ti for am335x in Debian.
-
-Package: bbb.io-kernel-5.4-ti-am57xx
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-5.4.106-ti-r42
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-5.4.106-ti-r42
- , ti-sgx-jacinto6evm-modules-5.4.106-ti-r42
- , bb-u-boot-am57xx-evm
-Description: BeagleBoard.org 5.4-ti for am57xx
- This metapackage will install linux-image-5.4-ti for am57xx in Debian.
-
-Package: bbb.io-kernel-5.4-ti-rt
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-5.4.106-ti-rt-r42
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-rt-r42
-Description: BeagleBoard.org 5.4-ti-rt
- This metapackage will install linux-image-5.4-ti-rt in Debian.
-
-Package: bbb.io-kernel-5.4-ti-rt-am335x
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-5.4.106-ti-rt-r42
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-5.4.106-ti-rt-r42
- , ti-sgx-ti335x-modules-5.4.106-ti-rt-r42
- , rtl8723bu-modules-5.4.106-ti-rt-r42
- , rtl8821cu-modules-5.4.106-ti-rt-r42
- , bb-u-boot-am335x-evm
-Description: BeagleBoard.org 5.4-ti-rt for am335x
- This metapackage will install linux-image-5.4-ti-rt for am335x in Debian.
-
-Package: bbb.io-kernel-5.4-ti-rt-am57xx
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-5.4.106-ti-rt-r42
-Depends:
- ${misc:Depends}
- , bbb.io-kernel-tasks (= ${source:Version})
-Recommends:
- libpruio-modules-5.4.106-ti-rt-r42
- , ti-sgx-jacinto6evm-modules-5.4.106-ti-rt-r42
- , bb-u-boot-am57xx-evm
-Description: BeagleBoard.org 5.4-ti-rt for am57xx
- This metapackage will install linux-image-5.4-ti-rt for am57xx in Debian.
-
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
@@ -381,9 +217,9 @@ Description: BeagleBoard.org 6.1-bone for am335x
 Package: bbb.io-kernel-6.5-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.5.0-rc7-bone7,
+Pre-Depends: linux-image-6.5.0-bone8,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.5.0-rc7-bone7
+Recommends: libpruio-modules-6.5.0-bone8
 Description: BeagleBoard.org 6.5-bone for am335x
  This metapackage will install linux-image-6.5-bone for am335x in Debian.
 
