rcnee-internal-testlab (1.20230906.0) - grab local gitlab cert
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bookworm/debian/control
+++ b/rcnee-internal-testlab/suite/bookworm/debian/control
@@ -20,6 +20,7 @@ Depends:
  , openjdk-11-jre-headless
  , pastebinit
  , tree
+ , wget
  , wireguard-tools
 Description: rcnee-internal-testlab
  rcnee-internal-testlab
