--- a/rcnee-internal-testlab/suite/buster/debian/control
+++ b/rcnee-internal-testlab/suite/buster/debian/control
@@ -19,6 +19,7 @@ Depends:
  , lsb-release
  , pastebinit
  , tree
+ , wget
  , wireguard-tools
 Description: rcnee-internal-testlab
  rcnee-internal-testlab
