--- a/rcnee-internal-testlab/suite/bullseye/debian/control
+++ b/rcnee-internal-testlab/suite/bullseye/debian/control
@@ -20,6 +20,7 @@ Depends:
  , openjdk-11-jre-headless
  , pastebinit
  , tree
+ , wget
  , wireguard-tools
 Description: rcnee-internal-testlab
  rcnee-internal-testlab
