rcnee-internal-testlab (1.20230906.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/buster/debian/control
+++ b/rcnee-internal-testlab/suite/buster/debian/control
@@ -14,9 +14,11 @@ Depends:
  , cockpit-packagekit
  , cockpit-system
  , cockpit-ws
+ , default-jre-headless
  , gpiod
- , nfs-common
  , lsb-release
+ , nfs-common
+ , ncdu
  , pastebinit
  , tree
  , wget
