--- a/bb-beagle-flasher/suite/bullseye/debian/rules
+++ b/bb-beagle-flasher/suite/bullseye/debian/rules
@@ -4,13 +4,7 @@
 #DH_VERBOSE = 1
 
 %:
-	dh $@ --with systemd
+	dh $@
 
-override_dh_installinit:
-	dh_installinit --name=beagle-flasher-init-shutdown --no-stop-on-upgrade --no-start
-
-override_dh_systemd_enable:
-	dh_systemd_enable --name=beagle-flasher-init-shutdown --no-enable
-
-override_dh_systemd_start:
-	dh_systemd_start --name=beagle-flasher-init-shutdown --no-start
+override_dh_builddeb:
+	dh_builddeb -- -Zxz
