--- a/bb-beagle-flasher/suite/focal/debian/control
+++ b/bb-beagle-flasher/suite/focal/debian/control
@@ -10,9 +10,7 @@ Homepage: https://github.com/rcn-ee/beagle-flasher
 Package: bb-beagle-flasher
 Architecture: armhf
 Recommends:
- bb-u-boot-am335x-evm
- , bb-u-boot-am57xx-evm
- , btrfs-progs
+ btrfs-progs
  , initramfs-tools
 Depends:
  ${shlibs:Depends}
@@ -26,5 +24,8 @@ Depends:
  , mount
  , rsync
  , util-linux
+ , mmc-utils
+ , bb-u-boot-am335x-evm
+ , bb-u-boot-am57xx-evm
 Description: beagleboard.org beagle-flasher
  beagleboard.org beagle-flasher
