--- a/bb-code-server/suite/bookworm/debian/bb-code-server.bb-code-server.service
+++ b/bb-code-server/suite/bookworm/debian/bb-code-server.bb-code-server.service
@@ -7,10 +7,9 @@ After=network.target
 Type=exec
 User=debian
 Group=debian
-ExecStartPre=/bin/ln -sf /opt/vsx-examples/examples/ /home/debian/
 ExecStartPre=/bin/mkdir -p /home/debian/.local/share/code-server/User/
 ExecStartPre=/bin/cp -v /opt/bb-code-server/settings.json /home/debian/.local/share/code-server/User/
-ExecStart=/opt/bb-code-server/app/bin/code-server --cert --auth none --disable-telemetry --disable-update-check --config /opt/bb-code-server/config/config.yaml --extensions-dir /opt/bb-code-server/extensions/ --bind-addr 0.0.0.0:3000 /home/debian/examples/BeagleBoard.code-workspace
+ExecStart=/opt/bb-code-server/app/bin/code-server --auth none --disable-telemetry --disable-update-check --config /opt/bb-code-server/config/config.yaml --extensions-dir /opt/bb-code-server/extensions/ --bind-addr 0.0.0.0:3000 /home/debian/examples/BeagleBoard.code-workspace
 Restart=always
 RestartSec=15
 
