bb-usb-gadgets (1.20231003.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-usb-gadgets/suite/bookworm/debian/control
+++ b/bb-usb-gadgets/suite/bookworm/debian/control
@@ -11,11 +11,13 @@ Architecture: all
 Pre-Depends:
  gt
  , libusbgx
- , umtp-responder
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
  , bc
- , systemd (>= 230)
+ , systemd
+ , generic-sys-mods
+Recommends:
+ bbb.io-getting-started
 Description: usb gadget customizations
  usb gadget customizations
