--- a/bb-usb-gadgets/suite/jammy/debian/control
+++ b/bb-usb-gadgets/suite/jammy/debian/control
@@ -15,6 +15,7 @@ Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
  , bc
- , systemd (>= 230)
+ , systemd
+ , generic-sys-mods
 Description: usb gadget customizations
  usb gadget customizations
