generic-sys-mods (1.20231003.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/generic-sys-mods/suite/bookworm/debian/control
+++ b/generic-sys-mods/suite/bookworm/debian/control
@@ -2,14 +2,25 @@ Source: generic-sys-mods
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 10)
+Build-Depends:
+ debhelper (>= 10)
 Standards-Version: 4.5.1
-Homepage: https://github.com/RPi-Distro/raspberrypi-sys-mods
-Vcs-Git: git://git@github.com:RPi-Distro/raspberrypi-sys-mods.git
-Vcs-Browser: https://github.com/RPi-Distro/raspberrypi-sys-mods
 
 Package: generic-sys-mods
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}, systemd (>= 230), cloud-guest-utils, e2fsprogs, bsdextrautils, net-tools
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+ , systemd
+ , cloud-guest-utils
+ , e2fsprogs
+ , bsdextrautils
+ , net-tools
+ , gzip
+ , whiptail
+ , parted
+ , lua5.1
+ , psmisc
+ , iw
 Description: System tweaks for the Generic Systems
  Various modifications to improve the performance or user experience.
